Ajustando a tela e detalhes do header

--- a/index.css
+++ b/index.css
@@ -1,18 +1,29 @@
-/* Remove margens e garante que o body ocupe toda a tela */
-html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-    overflow: hidden; /* Remove barras de rolagem */
+@import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
+
+/* Reset global */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-/* Garante que o #root ocupe toda a tela */
+/* Configurações globais */
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
+}
+
+/* Configuração do root */
 #root {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    background-color: #006916; /* Cor de fundo global */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: #006916;
 }
