--- a/src/telaEmpresa.css
+++ b/src/telaEmpresa.css
@@ -10,6 +10,12 @@
   min-height: 100vh;
   width: 100%;
   background-color: #E5EEE3;
+  overflow-y: auto;
+  height: 100vh;
+}
+
+.tela-empresa-content {
+  padding: 20px 0;
 }
 
 
