--- a/index.css
+++ b/index.css
@@ -15,15 +15,13 @@ html, body {
   width: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
+  background-color: #006916;
 }
 
 /* Configuração do root */
 #root {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: block;
   height: 100%;
   width: 100%;
-  background-color: #006916;
+  background-color: transparent;
 }
