--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,11 @@ body {
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #006916;
+  min-height: 100vh;
+  width: 100%;
+}
+
+html {
+  background-color: #006916;
 }
